--- a/AppDev2ndCW/wwwroot/index.html
+++ b/AppDev2ndCW/wwwroot/index.html
@@ -17,13 +17,13 @@
   <header id="mainHeader"> <a href="/" title="home" class="logo">
    <!-- I need this div because IE is an affront to mankind-->
     <div>
-    <h1>Explore California</h1>
+    <h1>Book Loves</h1>
     </div>
     </a>
     <nav id="siteNav">
-      <h1>Where do you want to go?</h1>
+      <h1>What do you want to read?</h1>
       <ul>
-       <li><a href="/tours.htm" title="Our tours">Tours <br /><span class="tagline">follow our bliss</span></a>
+       <li><a href="/tours.htm" title="Our tours">Tours <br /><span class="tagline">follow your kiss</span></a>
           <ul>
             <li><a href="/tours.htm" title="Our tours">All Tours</a></li>
             <li><a href="/tours.htm" title="find tours">Tours by Activity</a></li>
@@ -56,8 +56,9 @@
     </nav>
   </header>
   <section id="actionCall">
-  <h1>Explore our world your way</h1>
-  <a href="/tours.htm" title="Find your tour!"><h2>Find your tour</h2></a>
+      <h1>Explore and buy your way</h1>
+      <a href="/tours.htm" title="Find your Book!"><h2>Find your Book</h2></a>
+
   </section>
   <div id="contentWrapper">
   <section id="mainContent">
