--- a/AppDev2ndCW/wwwroot/index.html
+++ b/AppDev2ndCW/wwwroot/index.html
@@ -1,137 +1,129 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<title>Welcome to Explore California</title>
-<meta name="description" content="A lynda.com example of HTML5 and CSS3">
-<meta name="keywords" content="html5, css3, lynda, local storage, canvas, forms, semantics, web apps">
-<!--make sure mobile devices display the page at the proper scale	-->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--[if lt IE 9]>
-<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-<link href="/css/main.css" rel="stylesheet" type="text/css" media="screen, projection">
-</head>
-<body id="home" class="no-js">
-<div id="wrapper">
-  <header id="mainHeader"> <a href="/" title="home" class="logo">
-   <!-- I need this div because IE is an affront to mankind-->
-    <div>
-    <h1>Book Loves</h1>
-    </div>
-    </a>
-    <nav id="siteNav">
-      <h1>What do you want to read?</h1>
-      <ul>
-       <li><a href="/tours.htm" title="Our tours">Tours <br /><span class="tagline">follow your kiss</span></a>
-          <ul>
-            <li><a href="/tours.htm" title="Our tours">All Tours</a></li>
-            <li><a href="/tours.htm" title="find tours">Tours by Activity</a></li>
-            <li><a href="/tours.htm" title="find tours">Tours by Region</a></li>
-            <li><a href="/tours.htm" title="find tours">Tour Finder</a></li>
-          </ul>
-        </li>
-        <li><a href="mission.htm" title="What we believe">Mission <br /><span class="tagline">what makes us different?</span></a></li>
-        <li><a href="resources.htm" title="planning resources">Resources <br /><span class="tagline">plan your trip</span></a>
-          <ul>
-            <li><a href="resources/faq.htm" title="Got questions?">Tour FAQs</a></li>
-            <li><a href="resources/additional_resources.htm" title="additional resources">Tour Information</a></li>
-            <li><a href="resources/terms.htm" title="terms and conditions">Site Terms</a></li>
-          </ul>
-        </li>
-        <li><a href="explorers.htm" title="Our community">Explorers <br /><span class="tagline">join our community</span></a>
-          <ul>
-            <li><a href="explorers/join.htm" title="join our community">Join the Explorers</a></li>
-            <li><a href="/blog" title="read our blog!">Read our Blog</a></li>
-            <li><a href="explorers/gallery.htm" title="contributor photos">Tour Photos</a></li>
-            <li><a href="_video/EC_podcast_full version.mov" title="check out our podcast">Video podcast</a></li>
-          </ul>
-        </li>
-        <li><a href="contact.htm" title="contact us" class="last">Contact <br /><span class="tagline">we're listening</span></a>
-          <ul>
-            <li><a href="support.htm" title="need help?">Support</a></li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <section id="actionCall">
-      <h1>Explore and buy your way</h1>
-      <a href="/tours.htm" title="Find your Book!"><h2>Find your Book</h2></a>
 
-  </section>
-  <div id="contentWrapper">
-  <section id="mainContent">
- <article id="mainArticle"> 
- <h1>Tour Spotlight</h1>
-  <p class="spotlight">This month's spotlight package is Cycle California. Whether you are looking for some serious downhill thrills to a relaxing ride along the coast, you'll find something to love in Cycle California.<br /> <span class="accent"><a href="/tours_cycle.htm" title="Cycle California">tour details</a></span></p>
-  <h1>Explorer's Podcast</h1>
-<video controls poster="/images/podcast_poster.jpg" width="512" height="288" preload="none">
-	<source src="_video/podcast_teaser.mp4" type="video/mp4" />
-	<source src="_video/podcast_teaser.webm" type="video/webm" />
-	<source src="_video/podcast_teaser.theora.ogv"type="video/ogg" />
-</video>
-  <p class="videoText">Join us each month as we publish a new Explore California video podcast, with featured tours, customer photos, and some exctiing new features!<span class="accent"><a href="explorers/video.htm" title="Video Podcast">Watch the full video</a></span></p>
-  </article>
-  </section>
-    <aside id="secondaryContent">
-        <div id="specials" class="callOut">
-            <h1>Monthly Specials</h1>
-            <h2 class="top"><img src="/images/calm_bug.gif" alt="California Calm" width="75" height="75">California Calm</h2>
-            <p>
-                Day Spa Package <br>
-                <a href="/tours/tour_detail_cycle.htm">$250</a>
-            </p>
-            <h2><img src="/images/desert_bug.gif" alt="From desert to sea" width="75" height="75">From Desert to Sea</h2>
-            <p>
-                2 Day Salton Sea <br>
-                <a href="/tours/tour_detail_cycle.htm">$350</a>
-            </p>
-            <h2><img src="/images/backpack_bug.gif" alt="Backpack Cali" width="75" height="41">Backpack Cali</h2>
-            <p>
-                Big Sur Retreat <br>
-                <a href="/tours/tour_detail_cycle.htm">$620</a>
-            </p>
-            <h2><img src="/images/taste_bug.gif" alt="Taste of California" width="75" height="75">Taste of California</h2>
-            <p>
-                Tapas &amp; Groves <br>
-                <a href="/tours/tour_detail_taste.htm">$150</a>
-            </p>
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>One Page Wonder - Start Bootstrap Template</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom fonts for this page -->
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+
+    <!-- Custom styles for this page -->
+    <link href="/css/one-page-wonder.min.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Start Bootstrap</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Log In</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div id="trivia" class="callOut">
-            <h1>Did You Know?</h1>
-            <p>California produces over 17 million gallons of wine each year!</p>
+    </nav>
+
+    <header class="masthead text-center text-white">
+        <div class="masthead-content">
+            <div class="container">
+                <h1 class="masthead-heading mb-0">One Page Wonder</h1>
+                <h2 class="masthead-subheading mb-0">Will Rock Your Socks Off</h2>
+                <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
+            </div>
         </div>
-    </aside>
-  </div>
-  <footer id="pageFooter">
-  <section id="quickLinks">
-  <h1>Quick Nav</h1>
-    <ul id="quickNav">
-      <li><a href="/" title="Our home page">Home</a></li>
-      <li><a href="/tours.htm" title="Explore our tours">Tours</a></li>
-      <li><a href="mission.htm" title="What we think">Mission</a></li>
-      <li><a href="resources.htm" title="Guidance and planning">Resources</a></li>
-      <li><a href="explorers.htm" title="Join our community">Explorers</a></li>
-      <li><a href="contact.htm" title="Contact and support">Contact</a></li>
-    </ul>
-  </section>
-  <section id="footerResources">
-  <h1>Resources</h1>
-    <ul id="quickNav">
-      <li><a href="resources/faq.htm" title="Our home page">FAQ</a></li>
-      <li><a href="support.htm" title="Need help?">Support</a></li>
-      <li><a href="resources/legal.htm" title="The fine print">Legal</a></li><li><a href="login.htm">Login</a></li>
-    </ul>
-  </section>
-  <section id="companyInfo">
-  <h1>Contact</h1>
-  <h2>Explore California</h2>
-      <p>5605 Nota Street<br />
-        Ventura, CA 93003</p>
-      <p>866.555.4310<br />866.555.4315 <em>(24 hour support)</em></p>
-  </section>
-  </footer>
-</div>
+        <div class="bg-circle-1 bg-circle"></div>
+        <div class="bg-circle-2 bg-circle"></div>
+        <div class="bg-circle-3 bg-circle"></div>
+        <div class="bg-circle-4 bg-circle"></div>
+    </header>
+
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5">
+                        <img class="img-fluid rounded-circle" src="img/01.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">For those about to rock...</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <div class="p-5">
+                        <img class="img-fluid rounded-circle" src="img/02.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="p-5">
+                        <h2 class="display-4">We salute you!</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5">
+                        <img class="img-fluid rounded-circle" src="img/03.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">Let there be rock!</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="py-5 bg-black">
+        <div class="container">
+            <p class="m-0 text-center text-white small">Copyright &copy; Pustakalaya 2020</p>
+        </div>
+        <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 </body>
+
 </html>
