--- a/AppDev2ndCW/wwwroot/index.html
+++ b/AppDev2ndCW/wwwroot/index.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="home/register" style="color:white; font-weight:bold">Register</a>
                     </li>
                     <li class="nav-item">
-                         <a class="nav-link" href="../shared" style="color:white; font-weight:bold">Sign In</a>
+                         <a class="nav-link" href="home/login" style="color:white; font-weight:bold">Sign In</a>
                     </li>
                 </ul>
             </div>
