Removing register button

--- a/AppDev2ndCW/wwwroot/index.html
+++ b/AppDev2ndCW/wwwroot/index.html
@@ -38,9 +38,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="nav-link" href="home/register" style="color:white; font-weight:bold">Register</a>
-                    </li>
+                    </li>-->
                     <li class="nav-item">
                          <a class="nav-link" href="home/login" style="color:white; font-weight:bold">Sign In</a>
                     </li>
