changed login page background and removed footer in index page

--- a/AppDev2ndCW/wwwroot/index.html
+++ b/AppDev2ndCW/wwwroot/index.html
@@ -26,6 +26,11 @@
     <style>
         header.masthead {
             background-image: url(images/booklib.jpg);
+            background-size: cover;
+        }
+        .btn-primary {
+            background-color: darkred;
+            border-color: darkred;
         }
     </style>
 
@@ -42,7 +47,7 @@
                         <a class="nav-link" href="home/register" style="color:white; font-weight:bold">Register</a>
                     </li>-->
                     <li class="nav-item">
-                         <a class="nav-link" href="home/login" style="color:white; font-weight:bold">Sign In</a>
+                         <a class="nav-link" href="home/login" style="color:white; font-weight:bold; background-color: #CF000F">Sign In</a>
                     </li>
                 </ul>
             </div>
@@ -118,12 +123,12 @@
     </section>-->
 
     <!-- Footer -->
-    <footer class="py-5 bg-black">
+    <!--<footer class="py-5 bg-black">
         <div class="container">
             <p class="m-0 text-center text-white small">Copyright &copy; Pustakalaya 2020</p>
-        </div>
+        </div>-->
         <!-- /.container -->
-    </footer>
+    <!--</footer>-->
 
     <!-- Bootstrap core JavaScript -->
     <script src="/vendor/jquery/jquery.min.js"></script>
