--- a/AppDev2ndCW/wwwroot/index.html
+++ b/AppDev2ndCW/wwwroot/index.html
@@ -24,10 +24,14 @@
 
 <body>
     <style>
-        header.masthead {
+        body {
             background-image: url(images/booklib.jpg);
-            background-size: cover;
+            overflow: hidden;
         }
+            header.masthead {
+                background-image: unset;
+              
+            }
         .btn-primary {
             background-color: darkred;
             border-color: darkred;
@@ -59,7 +63,7 @@
             <div class="container">
                 <h1 class="masthead-heading mb-0">Pustak-ala-ya</h1>
                 <h2 class="masthead-subheading mb-0">A Book Stock Management System built with simplicity and minimalism</h2>
-                <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5" style="background-color:#CF000F;">Learn More</a>
+                <!--<a href="#" class="btn btn-primary btn-xl rounded-pill mt-5" style="background-color:#CF000F;">Learn More</a>-->
             </div>
         </div>
         <!--<div class="bg-circle-1 bg-circle"></div>
