render customer data in customer data table

--- a/AppDev2ndCW/wwwroot/index.html
+++ b/AppDev2ndCW/wwwroot/index.html
@@ -25,13 +25,15 @@
 <body>
     <style>
         body {
-            background-image: url(images/booklib.jpg);
+            background-color: black;
             overflow: hidden;
+            max-height: 100%;
         }
-            header.masthead {
-                background-image: unset;
-              
-            }
+        header.masthead {
+            background-image: url(img/booklib.jpg);
+            background-size: cover;
+            background-size: 100%;
+        }
         .btn-primary {
             background-color: darkred;
             border-color: darkred;
