removing whitespace from background

--- a/AppDev2ndCW/wwwroot/index.html
+++ b/AppDev2ndCW/wwwroot/index.html
@@ -25,12 +25,12 @@
 <body>
     <style>
         body {
-            background-color: black;
+            background-image: url(img/booklib.jpg);
             overflow: hidden;
             max-height: 100%;
         }
         header.masthead {
-            background-image: url(img/booklib.jpg);
+            background-image: unset;
             background-size: cover;
             background-size: 100%;
         }
